--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <!-- css-styles sheet -->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="C:\Users\Micro_Soft\Desktop\web dev\TinDog-Start-master\images\dog img.png">
+  <link rel="icon" href="images\dog img.png">
 
 </head>
 
